--- a/src/components/Cuadro1.css
+++ b/src/components/Cuadro1.css
@@ -1,19 +1,282 @@
-.caja1{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    position: absolute;
-    left: 100px;
-    top: 100px;
+        .c1{
+            width: 100px;
+            height: 100px;
+            left: 50px;
+            top: 50px;
+            background-color: blue;
+            position: absolute;
+        }
 
-}
+        .c2{
+            width: 100px;
+            height: 100px;
+            left: 100px;
+            top: 100px;
+            background-color: yellow;
+            position: absolute;
+        }
 
-.caja2{
-    width: 100px;
-    height: 100px;
-    background-color: blue;
-    position: absolute;
-    left: 200px;
-    top: 200px;
-    
-}
+        .c3{
+            width: 100px;
+            height: 100px;
+            left: 150px;
+            top: 150px;
+            background-color: red;
+            position: absolute;
+        }
+
+        .c4{
+            width: 50px;
+            height: 50px;
+            left: 200px;
+            top: 250px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        .c5{
+            width: 50px;
+            height: 50px;
+            left: 250px;
+            top: 200px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        /*linea izquierda*/
+        .c6{
+            width: 50px;
+            height: 400px;
+            left: 50px;
+            top: 150px;
+            background-color: green;
+            position: absolute;
+        }
+
+        /*linea superior*/
+        .c7{
+            width: 400px;
+            height: 50px;
+            left: 150px;
+            top: 50px;
+            background-color: red;
+            position: absolute;
+        }
+        
+        /*cuadrado central morado*/
+        .c8{
+            width: 200px;
+            height: 200px;
+            left: 250px;
+            top: 250px;
+            background-color: mediumpurple;
+            position: absolute;
+        }
+
+        /*cuadrados esquina inferior izquierda*/
+        .c9{
+            width: 100px;
+            height: 100px;
+            left: 50px;
+            top: 550px;
+            background-color: blue;
+            position: absolute;
+        }
+
+        .c10{
+            width: 100px;
+            height: 100px;
+            left: 100px;
+            top: 500px;
+            background-color: yellow;
+            position: absolute;
+        }
+
+        .c11{
+            width: 100px;
+            height: 100px;
+            left: 150px;
+            top: 450px;
+            background-color: red;
+            position: absolute;
+        }
+
+        .c12{
+            width: 50px;
+            height: 50px;
+            left: 200px;
+            top: 400px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        .c13{
+            width: 50px;
+            height: 50px;
+            left: 250px;
+            top: 450px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        /*medio circulo naranja*/
+        .c14{   
+            width: 100px;
+            height: 200px;
+            left: 250px;
+            top: 250px;
+            background-color: orange;
+            border-radius: 100px 0px 0px 100px;
+            z-index: 98;
+            position: absolute;
+        }
+
+        /*circulo azul*/
+        .c15{   
+            width: 150px;
+            height: 150px;
+            left: 275px;
+            top: 275px;
+            background-color: blue;
+            border-radius: 100px 100px 100px 100px;
+            z-index: 99;
+            position: absolute;
+        }
+
+        /*circulo blanco*/
+        .c16{   
+            width: 80px;
+            height: 80px;
+            left: 309px;
+            top: 309px;
+            background-color: white;
+            border-radius: 100px 100px 100px 100px;
+            z-index: 100;
+            position: absolute;
+        }
+
+        /*cuadrados esquina superior derecha*/
+        .c17{
+            width: 100px;
+            height: 100px;
+            left: 550px;
+            top: 50px;
+            z-index: 1;
+            background-color: blue;
+            position: absolute;
+        }
+
+        /*linea Derecha*/
+        .c18{
+            width: 50px;
+            height: 400px;
+            left: 600px;
+            top: 150px;
+            background-color: green;
+            position: absolute;
+        }
+
+        /*cuadrados esquina inferior derecha*/
+        .c19{
+            width: 100px;
+            height: 100px;
+            left: 550px;
+            top: 550px;
+            background-color: blue;
+            position: absolute;
+        }
+
+        /*linea Abajo*/
+        .c20{
+            width: 400px;
+            height: 50px;
+            left: 150px;
+            top: 600px;
+            background-color: red;
+            position: absolute;
+        }
+
+        .c21 {
+            width: 100px;
+            height: 100px;
+            left: 500px;
+            top: 100px;
+            background-color: yellow;
+            position: absolute;
+        }
+
+        .c22 {
+            width: 100px;
+            height: 100px;
+            left: 450px;
+            top: 150px;
+            background-color: red;
+            position: absolute;
+        }
+
+        .c23 {
+            width: 50px;
+            height: 50px;
+            left: 450px;
+            top: 250px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        .c24 {
+            width: 50px;
+            height: 50px;
+            left: 400px;
+            top: 200px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        .c25{
+            width: 100px;
+            height: 100px;
+            left: 500px;
+            top: 500px;
+            background-color: yellow;
+            position: absolute;
+        }
+
+        .c26 {
+            width: 100px;
+            height: 100px;
+            left: 450px;
+            top: 450px;
+            background-color: red;
+            position: absolute;
+        }
+
+        .c27 {
+            width: 50px;
+            height: 50px;
+            left: 450px;
+            top: 400px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        .c28 {
+            width: 50px;
+            height: 50px;
+            left: 400px;
+            top: 450px;
+            background-color: lightseagreen;
+            position: absolute;
+        }
+
+        /*circulo naranja*/
+
+        .c29 {
+            width: 100px;
+            height: 200px;
+            left: 350px;
+            top: 250px;
+            background-color: orange;
+            border-radius: 0px 100px 100px 0px;
+            z-index: 98;
+            position: absolute;
+        }
